--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 layout: default
 ---
 
+<h1>Hello world!</h1>
+
 <ul>
   {% for post in site.posts %}
   <li><a href="{{ post.url }}">{{ post.title }}</a></li>
