Add "Works" section.

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@ layout: default
     <a href="http://blog.hendytanata.com">other topics</a> too. I have some open
     source works and have contributed to some. I also
     <a href="http://twitter.com/htanata">tweets</a>, though not so much. I'm
-    doing freelance and consulting works on the side. Contact me if you're
-    interested.
+    doing freelance and <a href="works.html">consulting works</a> on the side.
+    Contact me if you're interested.
   </p>
 </section>
 
