--- a/works.html
+++ b/works.html
@@ -1,40 +1,75 @@
 ---
 layout: default
 ---
-<section>
-  <header>
-    <h1>Works</h1>
-  </header>
-  <dl>
-    <dt>Issue tracking system for DOCOMO interTouch (2010-2011)</dt>
-    <dd>
-      Web application to manage and troubleshoot customer issues, used mainly by
-      call center agents.
-    </dd>
+<section id="works">
+  <h1>Works</h1>
 
-    <dt>Colaboration tools for a physical security community (2009-2010)</dt>
-    <dd>
-      Social network and tools designed to help the community to collaborate and
-      share knowledge.
-    </dd>
+  <article>
+    <h2>What I Can Do</h2>
 
-    <dt>Rebate program for Shop N Save (a supermarket chain) (2009)</dt>
-    <dd>
-      An application to manage issuance and redemption of customer rebate
-      points.
-    </dd>
+    <dl>
+      <dt>Web application</dt>
+      <dd>
+        Custom developed application to solve problems like keeping track of
+        customers, inventory, orders, etc.
+      </dd>
 
-    <dt>NETS terminal integration for 7-Eleven (2009)</dt>
-    <dd>
-      Integration of NETS payment terminal with an interactive kiosk machine.
-    </dd>
+      <dt>Software development process</dt>
+      <dd>
+        Help building a software team infrastructure using known best practices
+        and technology. For example:
+        <ul>
+          <li>Source code version control (e.g. Subversion, git).</li>
+          <li>Issue tracker (e.g. trac, Redmine, Roundup, Bugzilla).</li>
+          <li>Test Driven Development (TDD) with RSpec and Cucumber.</li>
+          <li>Continous Integration (CI) with CruiseControl.rb.</li>
+        </ul>
+      </dd>
 
-    <dt>The Finder Magazine website (2008-2009)</dt>
-    <dd>
-      Website for The Finder Magazine consisting of content management,
-      advertisements, business listings, blog, and forum.
-    </dd>
-  </dl>
+      <dt>E-commerce</dt>
+      <dd>
+        Online shop to sell not only tangible products, but also e-books, MP3,
+        and others.
+      </dd>
+
+      <dt>Website</dt>
+      <dd>Company, personal, or group website or blog.</dd>
+    </dl>
+  </article>
+  <hr />
+  <article>
+    <h2>What I Have Worked On</h2>
+    <dl>
+      <dt>Issue tracking system for DOCOMO interTouch (2010-2011)</dt>
+      <dd>
+        Web application to manage and troubleshoot customer issues, used mainly by
+        call center agents.
+      </dd>
+
+      <dt>Colaboration tools for a physical security community (2009-2010)</dt>
+      <dd>
+        Social network and tools designed to help the community to collaborate and
+        share knowledge.
+      </dd>
+
+      <dt>Rebate program for Shop N Save (a supermarket chain) (2009)</dt>
+      <dd>
+        An application to manage issuance and redemption of customer rebate
+        points.
+      </dd>
+
+      <dt>NETS terminal integration for 7-Eleven (2009)</dt>
+      <dd>
+        Integration of NETS payment terminal with an interactive kiosk machine.
+      </dd>
+
+      <dt>The Finder Magazine website (2008-2009)</dt>
+      <dd>
+        Website for The Finder Magazine consisting of content management,
+        advertisements, business listings, blog, and forum.
+      </dd>
+    </dl>
+  </article>
   <footer>
     All these works were created using Ruby on Rails or plain Ruby.
   </footer>
