--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@ layout: default
   </p>
   <p>
     I wrote blog posts about programming and
-    <a href="http://blog.hendytanata.com">other topics</a> too. I have some open
-    source works and have contributed to some. I also
+    <a href="http://blog.hendytanata.com">other topics</a> too. I have some
+    <a href="open_source.html">open source works</a> and have
+    <a href="open_source.html#open_source_contributions">contributed</a> to some. I also
     <a href="http://twitter.com/htanata">tweets</a>, though not so much. I'm
     doing freelance and <a href="works.html">consulting works</a> on the side.
     Contact me if you're interested.
