Add Ruby on Rails to open source contributions.

--- a/open_source.html
+++ b/open_source.html
@@ -55,6 +55,9 @@ title: Open Source
       <li>
         <a href="https://github.com/dchelimsky/rspec-rails/commits/master?author=htanata">rspec-rails</a>
       </li>
+      <li>
+        <a href="http://contributors.rubyonrails.org/contributors/hendy-tanata/commits">Ruby on Rails</a>
+      </li>
     </ul>
   </article>
 </section>
