Add meta description content for SEO.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 title: Freelance Ruby on Rails Developer
+description: I do web application development in Ruby on Rails. Although I'm
+  based in Singapore, I also accept works from other countries.
 ---
 <section id="intro">
   <header>
