--- a/index.html
+++ b/index.html
@@ -4,39 +4,43 @@ title: Freelance Ruby on Rails Developer
 description: I do web application development in Ruby on Rails. Although I'm
   based in Singapore, I also accept works from other countries.
 ---
-<section id="intro">
-  <header>
-    <h1>Hello!</h1>
-  </header>
-  <p>
-    Other than the simple fact that I'm human, I'm also a programmer. I've been
-    doing Ruby and Rails since 2007. That's when the bleeding edge Rails was
-    version 1.2.5.
-    <span class="more"><a href="#">More&hellip;</a></span>
-  </p>
-  <p>
-    I'm at the moment based in Singapore, an extension of getting my computer
-    engineering degree there. After working for corporations for about two
-    years, I finally had enough and figured out that it was not the way to move
-    forward. In order to be a builder and crafter, I at least had to work in a
-    software company or similar.
-  </p>
-  <p>
-    And so began my journey up to now. It has taken me from someone who knew
-    little about programming and the software development process to being able
-    to build and deploy a web application from scratch using known best
-    practices.
-  </p>
-  <p>
-    I wrote blog posts about programming and
-    <a href="http://blog.hendytanata.com">other topics</a> too. I have some
-    <a href="open_source.html">open source works</a> and have
-    <a href="open_source.html#open_source_contributions">contributed</a> to some. I also
-    <a href="http://twitter.com/htanata">tweets</a>, though not so much. I'm
-    doing freelance and <a href="works.html">consulting works</a> on the side.
-    Contact me if you're interested.
-  </p>
-</section>
+<div class="row">
+  <div class="span11">
+    <section id="intro">
+      <header>
+        <h1>Hello!</h1>
+      </header>
+      <p>
+        Other than the simple fact that I'm human, I'm also a programmer. I've been
+        doing Ruby and Rails since 2007. That's when the bleeding edge Rails was
+        version 1.2.5.
+        <span class="more"><a href="#">More&hellip;</a></span>
+      </p>
+      <p>
+        I'm at the moment based in Singapore, an extension of getting my computer
+        engineering degree there. After working for corporations for about two
+        years, I finally had enough and figured out that it was not the way to move
+        forward. In order to be a builder and crafter, I at least had to work in a
+        software company or similar.
+      </p>
+      <p>
+        And so began my journey up to now. It has taken me from someone who knew
+        little about programming and the software development process to being able
+        to build and deploy a web application from scratch using known best
+        practices.
+      </p>
+      <p>
+        I wrote blog posts about programming and
+        <a href="http://blog.hendytanata.com">other topics</a> too. I have some
+        <a href="open_source.html">open source works</a> and have
+        <a href="open_source.html#open_source_contributions">contributed</a> to some. I also
+        <a href="http://twitter.com/htanata">tweets</a>, though not so much. I'm
+        doing freelance and <a href="works.html">consulting works</a> on the side.
+        Contact me if you're interested.
+      </p>
+    </section>
+  </div>
+</div>
 
 <hr />
 
