--- a/open_source.html
+++ b/open_source.html
@@ -44,6 +44,9 @@ title: Open Source
         <a href="https://github.com/timcharper/calendar_date_select/commits/master?author=htanata">Calendar Date Select</a>
       </li>
       <li>
+        <a href="https://github.com/jnunemaker/httparty/commits?author=htanata">httparty</a>
+      </li>
+      <li>
         <a href="https://github.com/thomas-mcdonald/bootstrap-sass/commits?author=htanata">bootstrap-sass</a>
       </li>
       <li>
