Update link to acts_as_audited.

--- a/open_source.html
+++ b/open_source.html
@@ -56,7 +56,7 @@ title: Open Source
         <a href="https://github.com/augustl/live-validations/commits/master?author=htanata">Live Validations</a>
       </li>
       <li>
-        <a href="https://github.com/collectiveidea/acts_as_audited/commits/master?author=htanata">acts_as_audited</a>
+        <a href="https://github.com/collectiveidea/audited/commits?author=htanata">audited</a>
       </li>
       <li>
         <a href="https://github.com/chriseppstein/compass/commits/stable?author=htanata">Compass</a>
