--- a/open_source.html
+++ b/open_source.html
@@ -47,6 +47,9 @@ title: Open Source
         <a href="https://github.com/jnunemaker/httparty/commits?author=htanata">httparty</a>
       </li>
       <li>
+        <a href="https://github.com/spree/spree/commits?author=htanata">Spree</a>
+      </li>
+      <li>
         <a href="https://github.com/thomas-mcdonald/bootstrap-sass/commits?author=htanata">bootstrap-sass</a>
       </li>
       <li>
