--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ description: I do web application development in Ruby on Rails. Although I'm
         practices.
       </p>
       <p>
-        I wrote blog posts about programming and
+        I write blog posts about programming and
         <a href="http://blog.hendytanata.com">other topics</a> too. I have some
         <a href="open_source.html">open source works</a> and have
         <a href="open_source.html#open_source_contributions">contributed</a> to some. I also
