Link "blog posts" to programming blog.

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@ description: I do web application development in Ruby on Rails. Although I'm
         practices.
       </p>
       <p>
-        I write blog posts about programming and
-        <a href="http://blog.hendytanata.com">other topics</a> too. I have some
-        <a href="open_source.html">open source works</a> and have
+        I write <a href="http://codeftw.blogspot.com/">blog posts</a> about
+        programming and <a href="http://blog.hendytanata.com">other topics</a>
+        too. I have some <a href="open_source.html">open source works</a> and have
         <a href="open_source.html#open_source_contributions">contributed</a> to some. I also
         <a href="http://twitter.com/htanata">tweets</a>, though not so much. I'm
         doing freelance and <a href="works.html">consulting works</a> on the side.
