--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 ---
 layout: default
 title: Freelance Ruby on Rails Developer
-description: I do web application development in Ruby on Rails. Although I'm
-  based in Singapore, I also accept works from other countries.
+description: I do web application development in Ruby on Rails.
 ---
 <div class="row">
   <div class="span11">
