Remove "Freelance" from title.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Freelance Ruby on Rails Developer
+title: Ruby on Rails Developer
 description: I do web application development in Ruby on Rails.
 ---
 <div class="row">
