Add announcement about not accepting any projects.

--- a/works.html
+++ b/works.html
@@ -2,6 +2,11 @@
 layout: default
 title: Works
 ---
+
+<div class="alert alert-info">
+  I'm currently not accepting any works or projects.
+</div>
+
 <section id="works">
   <h1>Works</h1>
 
