Add more open source works.

--- a/open_source.html
+++ b/open_source.html
@@ -9,11 +9,32 @@ title: Open Source
     <h2>Projects</h2>
 
     <h3>
+      <a href="https://github.com/htanata/git_snip">git-snip</a>
+    </h3>
+    <p>
+      Clean obsolete branches on your git repository safely.
+    </p>
+
+    <h3>
+      <a href="https://github.com/lovewithfood/rubocop-rspec-focused">rubocop-rspec-focused</a>
+    </h3>
+    <p>
+      RuboCop lint for focused specs.
+    </p>
+
+    <h3>
       <a href="http://github.com/htanata/bortissimo/tree/master">Bortissimo</a>
     </h3>
     <p>
       A base Rails 2.3 application with compass, formtastic, factory_girl,
       searchlogic and its own scaffold.
+    </p>
+
+    <h3>
+      <a href="https://github.com/lovewithfood/s3-assets-sync">s3-assets-sync</a>
+    </h3>
+    <p>
+      Sync asset files (CSS, JS, images) with Amazon S3.
     </p>
 
     <h3>
@@ -65,6 +86,9 @@ title: Open Source
       </li>
       <li>
         <a href="https://github.com/dchelimsky/rspec-rails/commits/master?author=htanata">rspec-rails</a>
+      </li>
+      <li>
+        <a href="https://github.com/guard/guard-rspec/commits?author=htanata">guard-rspec</a>
       </li>
     </ul>
   </article>
