Add ARIA alert role.

--- a/works.html
+++ b/works.html
@@ -3,7 +3,7 @@ layout: default
 title: Works
 ---
 
-<div class="alert alert-info">
+<div role="alert" class="alert alert-info">
   I'm currently not accepting any works or projects.
 </div>
 
