Add style for alert messages.

--- a/works.html
+++ b/works.html
@@ -3,7 +3,7 @@ layout: default
 title: Works
 ---
 
-<div role="alert" class="alert alert-info">
+<div role="alert" class="callout warning">
   I'm currently not accepting any works or projects.
 </div>
 
