Use headings and paragraphs instead of description lists.

--- a/works.html
+++ b/works.html
@@ -13,68 +13,65 @@ title: Works
   <article>
     <h2>What I Can Do</h2>
 
-    <dl>
-      <dt>Web application</dt>
-      <dd>
-        Custom developed application to solve problems like keeping track of
-        customers, inventory, orders, etc.
-      </dd>
+    <h3>Web application</h3>
+    <p>
+      Custom developed application to solve problems like keeping track of
+      customers, inventory, orders, etc.
+    </p>
 
-      <dt>Software development process</dt>
-      <dd>
-        Help building a software team infrastructure using known best practices
-        and technology. For example:
-        <ul>
-          <li>Source code version control (e.g. Subversion, git).</li>
-          <li>Issue tracker (e.g. trac, Redmine, Roundup, Bugzilla).</li>
-          <li>Test Driven Development (TDD) with RSpec and Cucumber.</li>
-          <li>Continous Integration (CI) with CruiseControl.rb.</li>
-        </ul>
-      </dd>
+    <h3>Software development process</h3>
+    <p>
+      Help building a software team infrastructure using known best practices
+      and technology. For example:
+      <ul>
+        <li>Source code version control (e.g. Subversion, git).</li>
+        <li>Issue tracker (e.g. trac, Redmine, Roundup, Bugzilla).</li>
+        <li>Test Driven Development (TDD) with RSpec and Cucumber.</li>
+        <li>Continous Integration (CI) with CruiseControl.rb.</li>
+      </ul>
+    </p>
 
-      <dt>E-commerce</dt>
-      <dd>
-        Online shop to sell not only tangible products, but also e-books, MP3,
-        and others.
-      </dd>
+    <h3>E-commerce</h3>
+    <p>
+      Online shop to sell not only tangible products, but also e-books, MP3,
+      and others.
+    </p>
 
-      <dt>Website</dt>
-      <dd>Company, personal, or group website or blog.</dd>
-    </dl>
+    <h3>Website</h3>
+    <p>Company, personal, or group website or blog.</p>
   </article>
   <hr />
   <article>
     <h2>What I Have Worked On</h2>
-    <dl>
-      <dt>Issue tracking system for DOCOMO interTouch (2010-2011)</dt>
-      <dd>
-        Web application to manage and troubleshoot customer issues, used mainly by
-        call center agents.
-      </dd>
 
-      <dt>Colaboration tools for a physical security community (2009-2010)</dt>
-      <dd>
-        Social network and tools designed to help the community to collaborate and
-        share knowledge.
-      </dd>
+    <h3>Issue tracking system for DOCOMO interTouch (2010-2011)</h3>
+    <p>
+      Web application to manage and troubleshoot customer issues, used mainly by
+      call center agents.
+    </p>
 
-      <dt>Rebate program for Shop N Save (a supermarket chain) (2009)</dt>
-      <dd>
-        An application to manage issuance and redemption of customer rebate
-        points.
-      </dd>
+    <h3>Colaboration tools for a physical security community (2009-2010)</h3>
+    <p>
+      Social network and tools designed to help the community to collaborate and
+      share knowledge.
+    </p>
 
-      <dt>NETS terminal integration for 7-Eleven (2009)</dt>
-      <dd>
-        Integration of NETS payment terminal with an interactive kiosk machine.
-      </dd>
+    <h3>Rebate program for Shop N Save (a supermarket chain) (2009)</h3>
+    <p>
+      An application to manage issuance and redemption of customer rebate
+      points.
+    </p>
 
-      <dt>The Finder Magazine website (2008-2009)</dt>
-      <dd>
-        Website for The Finder Magazine consisting of content management,
-        advertisements, business listings, blog, and forum.
-      </dd>
-    </dl>
+    <h3>NETS terminal integration for 7-Eleven (2009)</h3>
+    <p>
+      Integration of NETS payment terminal with an interactive kiosk machine.
+    </p>
+
+    <h3>The Finder Magazine website (2008-2009)</h3>
+    <p>
+      Website for The Finder Magazine consisting of content management,
+      advertisements, business listings, blog, and forum.
+    </p>
   </article>
   <footer>
     All these works were created using Ruby on Rails or plain Ruby.
