Add open source contribution to remote_syslog2-cookbook.

--- a/open_source.html
+++ b/open_source.html
@@ -70,6 +70,9 @@ title: Open Source
         <a href="https://github.com/spree/spree/commits?author=htanata">Spree</a>
       </li>
       <li>
+        <a href="https://github.com/trappar/remote_syslog2-cookbook/commits?author=htanata">remote_syslog2-cookbook</a>
+      </li>
+      <li>
         <a href="https://github.com/thomas-mcdonald/bootstrap-sass/commits?author=htanata">bootstrap-sass</a>
       </li>
       <li>
