--- a/open_source.html
+++ b/open_source.html
@@ -88,6 +88,9 @@ title: Open Source
         <a href="https://github.com/chriseppstein/compass/commits/stable?author=htanata">Compass</a>
       </li>
       <li>
+        <a href="https://github.com/Fyrd/caniuse/commits?author=htanata">Can I use</a>
+      </li>
+      <li>
         <a href="https://github.com/dchelimsky/rspec-rails/commits/master?author=htanata">rspec-rails</a>
       </li>
       <li>
