HTTPS everything possible.

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@ description: I do web application development in Ruby on Rails.
     recursion optimization, pattern matching, function composition, etc.
   </p>
   <p>
-    I write <a href="http://codeftw.blogspot.com/">blog posts</a> about
-    programming and <a href="http://blog.hendytanata.com">other topics</a>
+    I write <a href="https://codeftw.blogspot.com/">blog posts</a> about
+    programming and <a href="https://blog.hendytanata.com">other topics</a>
     too. I have some <a href="open_source.html">open source works</a> and have
     <a href="open_source.html#open_source_contributions">contributed</a> to some. I also
-    <a href="http://twitter.com/htanata">tweets</a>, though not so much. I'm
+    <a href="https://twitter.com/htanata">tweets</a>, though not so much. I'm
     doing freelance and <a href="works.html">consulting works</a> on the side.
     Contact me if you're interested.
   </p>
@@ -56,9 +56,9 @@ description: I do web application development in Ruby on Rails.
 
 <section>
   <header><h1>Blog Posts</h1></header>
-  <script src="http://feeds.feedburner.com/CodeFtw?format=sigpro" type="text/javascript"></script>
+  <script src="https://feeds.feedburner.com/CodeFtw?format=sigpro" type="text/javascript"></script>
   <noscript>
-    Visit <a href="http://codeftw.blogspot.com">Code FTW</a> to read my thoughts
+    Visit <a href="https://codeftw.blogspot.com">Code FTW</a> to read my thoughts
     about software development.
   </noscript>
 </section>
