--- a/open_source.html
+++ b/open_source.html
@@ -23,7 +23,7 @@ title: Open Source
     </p>
 
     <h3>
-      <a href="http://github.com/htanata/bortissimo/tree/master">Bortissimo</a>
+      <a href="https://github.com/htanata/bortissimo/tree/master">Bortissimo</a>
     </h3>
     <p>
       A base Rails 2.3 application with compass, formtastic, factory_girl,
@@ -38,7 +38,7 @@ title: Open Source
     </p>
 
     <h3>
-      <a href="http://code.google.com/p/f1standings-uwa/">Formula 1 Standings Widget</a>
+      <a href="https://code.google.com/p/f1standings-uwa/">Formula 1 Standings Widget</a>
     </h3>
     <p>
       Formula 1 drivers and constructors standings widget which runs on
@@ -46,7 +46,7 @@ title: Open Source
     </p>
 
     <h3>
-      <a href="http://code.google.com/p/sgmf-uwa/">Singapore Mutual Funds Widget</a>
+      <a href="https://code.google.com/p/sgmf-uwa/">Singapore Mutual Funds Widget</a>
     </h3>
     <p>
       Daily prices of Singapore based mutual funds widget which runs on
