Add open source contribution to rake.

--- a/open_source.html
+++ b/open_source.html
@@ -91,6 +91,9 @@ title: Open Source
         <a href="https://github.com/Fyrd/caniuse/commits?author=htanata">Can I use</a>
       </li>
       <li>
+        <a href="https://github.com/ruby/rake/commits?author=htanata">rake</a>
+      </li>
+      <li>
         <a href="https://github.com/dchelimsky/rspec-rails/commits/master?author=htanata">rspec-rails</a>
       </li>
       <li>
