--- a/open_source.html
+++ b/open_source.html
@@ -97,6 +97,9 @@ title: Open Source
         <a href="https://github.com/dchelimsky/rspec-rails/commits/master?author=htanata">rspec-rails</a>
       </li>
       <li>
+        <a href="https://github.com/rspec/rspec-expectations/commits?author=htanata">rspec-expectations</a>
+      </li>
+      <li>
         <a href="https://github.com/guard/guard-rspec/commits?author=htanata">guard-rspec</a>
       </li>
     </ul>
