--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ description: I do web application development in Ruby on Rails.
     programming and <a href="https://blog.hendytanata.com">other topics</a>
     too. I have some <a href="open_source.html">open source works</a> and have
     <a href="open_source.html#open_source_contributions">contributed</a> to some. I also
-    <a href="https://twitter.com/htanata">tweets</a>, though not so much. I'm
+    <a href="https://twitter.com/htanata">tweet</a>, though not so much. I'm
     doing freelance and <a href="works.html">consulting works</a> on the side.
     Contact me if you're interested.
   </p>
